--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dev": "next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
+    "legal-ingestion": "tsx src/scripts/run-legal-ingestion.ts",
+    "test-enhanced-plans": "tsx src/scripts/test-enhanced-lesson-plan.ts",
+    "demo-enhanced-plans": "tsx src/scripts/demo-enhanced-lesson-plan.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
